# Web_Nav

./: .gitignore  README.md  Session.vim
.bsp/: sbt.json
.metals/: metals.mv.db
extension/: babel.config.js  manifest.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
extension/public/: manifest.json  popup.html  style.css
extension/src/: WasmWorker.ts  background.ts  global.d.ts  popup.ts  worker.ts
extension/src/popup/: ChildrenDisplay.ts  OutLinkFocus.ts  OutLinkItem.ts  PopupWasmObserver.ts  popup.ts  popup.tsx  style.css
extension/src/popup/main-components/: ChildrenDisplay.ts  Header.tsx  OutLinkItem.ts  OutlinkItem.tsx  SearchDisplay.tsx  SublinkView.tsx
extension/webpack/: webpack.config.js
web-nav-server/: .gitignore  build.sbt
web-nav-server/.bloop/: root-test.json  root.json
web-nav-server/.metals/: metals.mv.db
web-nav-server/app/v1/: App.scala  HomeController.scala
web-nav-server/app/v1/models/: HistoryAnalyzation.scala  JsonConverters.scala  User.scala  UserData.scala
web-nav-server/conf/: application.conf  routes
web-nav-server/project/: plugins.sbt
web-nav-server/project/.bloop/: bloop.settings.json  web-nav-server-build.json
web-nav-server/project/project/.bloop/: web-nav-server-build-build.json
web-nav-server/test/v1/models/: HistoryAnalyzationSpec.scala
webnav_analysis/: Cargo.toml
webnav_analysis/src/: filter_scoring.rs  history_graph.rs  lib.rs
webnav_analysis/src/web_interface/: mod.rs  web_functions.rs
