[package]
name = "webnav_analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.81"
js-sys = "0.3.58"
wasm-bindgen-futures = "0.4.31"

[profile.release]
lto = true



