[package]
name = "webnav_analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"] }
js-sys = "0.3.58"
wasm-bindgen-futures = "0.4.31"
wasm-bindgen-test = "0.3.0"
itertools = "0.8.0"
serde-wasm-bindgen = "0.1.0"
serde = { version = "1.0", features = ["derive"]}
wasm-timer = "0.2.5"
web-sys = { version="0.3.60", features = ["Performance"]}





